[fix] Remove CSS that was causing usability issues on the publication review page. The agreement checkbox was being covered by an out of place div, causing the checkbox to not be clickable.

--- a/core/plugins/projects/publications/assets/css/publications.css
+++ b/core/plugins/projects/publications/assets/css/publications.css
@@ -662,13 +662,8 @@
 		padding: 0;
 		margin: 0;
 		width: 50%;
-		min-height: 300px;
 		-moz-border-radius: 20px 20px 0 0;
 		border-radius: 20px 20px 0 0;
-	}
-	#pub-editor .col, #pub-editor .columns {
-		padding-bottom: 300em;
-	    margin-bottom: -300em;
 	}
 	#pub-editor {
 		border-bottom: 1px solid #d3c3b4 !important;
